prevent overflow on caselist

--- a/force-app/main/default/lwc/crmNavCaseItem/crmNavCaseItemNewDesign.css
+++ b/force-app/main/default/lwc/crmNavCaseItem/crmNavCaseItemNewDesign.css
@@ -1,5 +1,6 @@
 .custom-padding {
     padding-left: 2rem;
+    overflow-wrap: break-word;
 }
 
 [data-selected='true'] {
