--- a/force-app/main/default/lwc/crmNavCaseList/crmNavCaseListNewDesign.css
+++ b/force-app/main/default/lwc/crmNavCaseList/crmNavCaseListNewDesign.css
@@ -1,3 +1,4 @@
 .custom-padding {
     padding-left: 2rem;
+    overflow-wrap: break-word;
 }
